--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="bg-white max-w-screen-md mx-auto p-4 shadow-lg rounded-xl ring-1 ring-gray-300">
         <!-- Profile -->
         <div class="flex p-8">
-          <img class="rounded-full object-cover w-48" src="/picture/Me.JPG">
+          <img class="rounded-full object-cover w-48" src="../picture/Me.JPG">
           <div class="p-4 px-8">
             <p class="font-semibold text-xl ">Atthapong Auewongchai</p>
             <p class="text-sm text-gray-600 py-8 ">
@@ -37,7 +37,7 @@
 
         <!-- Programming -->
         <div class="flex p-4 shadow-lg">
-          <img class="rounded-l-lg object-cover h-40 w-40 " src="/picture/prog.jpg" alt="Programming">
+          <img class="rounded-l-lg object-cover h-40 w-40 " src="../picture/prog.jpg" alt="Programming">
           <div class="p-4 px-8">
             <p class="font-semibold text-xl ">Programming</p>
             <p class="text-sm text-gray-600 py-8 ">
