--- a/index.html
+++ b/index.html
@@ -7,58 +7,64 @@
   <title>My Resume Website</title>
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-gray-400">
-    <!--nevbar container-->
-    <div class="bg-white border-b-2 py-4">
-      <!--navbar-->
-      <div class="flex justify-evenly max-w-screen-md mx-auto">
-        <p class="font-semibold text-x1 text-blue-600"> Home </p>
-        <p class="font-semibold text-x1 text-blue-600"> Experience </p>
-        <p class="font-semibold text-x1 text-blue-600"> Contact </p>
-      </div>
-    </div>
+<body>
+        <div class="relative min-h-screen flex">
+          <!-- Profile -->
+          <div class="p-12 bg-blue-400 w-64 ">
+            <img class="rounded-full object-cover w-40" src="/picture/Me.JPG">
+            <br>
+            <div class="text-center">
+            <p class="font-semibold text-white text-xl">PEEMTM</p>
+            </div>
+            <br><br>
+            <!--navbar-->
+            <div class="font-semibold text-x1 text-white">
+              <a href="/index.html"><p> Home </p><br></a>
+              <a href="/experience.html"><p> Experience </p><br></a>
+              <a href="/contact.html"><p> Contact </p></a>
+            </div>
+            <!--navbar icon-->
+            <div class="fixed flex bottom-16 inset-x-16 space-x-6">
+              <!-- facebook -->
+              <a target="_blank" href="https://www.facebook.com/profile.php?id=100000200849341"><img src="https://img.icons8.com/ios-filled/25/000000/facebook-f.png"/></a>
+              <!-- ig -->
+              <a target="_blank" href="https://www.instagram.com/attpong_peem/"><img src="https://img.icons8.com/ios-glyphs/25/000000/instagram-new.png"/></a>
+              <!-- twitter -->
+              <a target="_blank" href="https://twitter.com/PEEM_TM"><img src="https://img.icons8.com/ios-glyphs/25/000000/twitter--v1.png"/></a>
+            </div>
+              <p class="fixed bottom-4 inset-x-16 text-blue-600 ">© 2021 PEEMTM</p>
+          </div>
 
-    <!-- Post container-->
-    <div class="space-y-2 py-4">
-      <!--Box card-->
-      <div class="bg-white max-w-screen-md mx-auto p-4 shadow-lg rounded-xl ring-1 ring-gray-300">
-        <!-- Profile -->
-        <div class="flex p-8">
-          <img class="rounded-full object-cover w-48" src="../picture/Me.JPG">
-          <div class="p-4 px-8">
-            <p class="font-semibold text-xl ">Atthapong Auewongchai</p>
-            <p class="text-sm text-gray-600 py-8 ">
-              Hi , My name is Atthapong Auewongchai.I study at Chiangmai University faculty of Computer Engineering.I'm interested in Ai and Hardware.  
-            </p>
+          <!-- Home detail -->
+          <div class="flex-1 bg-white ring-gray-300">
+            <div class="py-20 max-w-screen-md mx-auto text-center text-xl">
+              <p class="text-3xl text-black">Atthapong Auewongchai</p>
+              <p class="my-6">Hi, my name is Atthapong.I study in Chiangmai University of computer engineering.I prefer hands-on practice rather than theory.I'm interested in AI and Hardware engineering.</p>
+            </div>
+            <p class="text-center text-red-600 text-5xl font-semibold">My Skills</p>
+            <div class="my-20">
+            <!-- Programming -->
+            <div class="flex items-center p-4 shadow-lg">
+              <img class="rounded-l-lg object-cover h-40 w-40 " src="/picture/prog.jpg" alt="Programming">
+              <div class="p-4 px-8">
+                <p class="font-semibold text-xl ">Programming</p>
+                <p class="text-sm text-gray-600 py-8 ">
+                  I code using C++,java and html using VScode,and also some frontend website.
+                </p>
+              </div>
+            </div>
+            <!-- UI/UX -->
+            <div class="flex p-4 shadow-lg">
+              <img class="rounded-l-lg object-cover h-40 w-40 " src="/picture/Webpage.jpg" alt="Programming">
+              <div class="p-4 px-8">
+                <p class="font-semibold text-xl ">Webpage design</p>
+                <p class="text-sm text-gray-600 py-8 ">
+                  The front page is the most important for a website to attract people to your website.
+                </p>
+              </div>
+            </div>
+          </div>
           </div>
         </div>
-
-        <p class="text-center text-red-600 text-xl font-semibold">My Skills</p>
-
-        <!-- Programming -->
-        <div class="flex p-4 shadow-lg">
-          <img class="rounded-l-lg object-cover h-40 w-40 " src="../picture/prog.jpg" alt="Programming">
-          <div class="p-4 px-8">
-            <p class="font-semibold text-xl ">Programming</p>
-            <p class="text-sm text-gray-600 py-8 ">
-              I code using C++,java and html using VScode,and also some frontend website.
-            </p>
-          </div>
-        </div>
-        <!-- UI/UX -->
-        <div class="flex p-4 shadow-lg">
-          <img class="rounded-l-lg object-cover h-40 w-40 " src="/picture/Webpage.jpg" alt="Programming">
-          <div class="p-4 px-8">
-            <p class="font-semibold text-xl ">Webpage design</p>
-            <p class="text-sm text-gray-600 py-8 ">
-              The front page is the most important for a website to attract people to your website.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  <div class="bg-white py-4">
-    <p class="text-center text-blue-600 ">© 2021 PEEMTM.com by Atthapong Auewongchai</p>
-  </div>
 </body>
 </html>
