--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <br><br>
             <!--navbar-->
             <div class="font-semibold text-x1 text-white">
-              <a href="/index.html"><p> Home </p><br></a>
-              <a href="/experience.html"><p> Experience </p><br></a>
-              <a href="/contact.html"><p> Contact </p></a>
+              <a href="index.html"><p> Home </p><br></a>
+              <a href="experience.html"><p> Experience </p><br></a>
+              <a href="contact.html"><p> Contact </p></a>
             </div>
             <!--navbar icon-->
             <div class="fixed flex bottom-16 inset-x-16 space-x-6">
@@ -45,7 +45,7 @@
             <div class="my-20">
             <!-- Programming -->
             <div class="flex items-center p-4 shadow-lg">
-              <img class="rounded-l-lg object-cover h-40 w-40 " src="../picture/prog.jpg" alt="Programming">
+              <img class="rounded-l-lg object-cover h-40 w-40 " src="picture/prog.jpg" alt="Programming">
               <div class="p-4 px-8">
                 <p class="font-semibold text-xl ">Programming</p>
                 <p class="text-sm text-gray-600 py-8 ">
@@ -55,7 +55,7 @@
             </div>
             <!-- UI/UX -->
             <div class="flex p-4 shadow-lg">
-              <img class="rounded-l-lg object-cover h-40 w-40 " src="../picture/Webpage.jpg" alt="Programming">
+              <img class="rounded-l-lg object-cover h-40 w-40 " src="picture/Webpage.jpg" alt="Programming">
               <div class="p-4 px-8">
                 <p class="font-semibold text-xl ">Webpage design</p>
                 <p class="text-sm text-gray-600 py-8 ">
