--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="relative min-h-screen flex">
           <!-- Profile -->
           <div class="p-12 bg-blue-400 w-64 ">
-            <img class="rounded-full object-cover w-40" src="../picture/Me.JPG">
+            <img class="rounded-full object-cover w-40" src="picture/Me.JPG">
             <br>
             <div class="text-center">
             <p class="font-semibold text-white text-xl">PEEMTM</p>
