--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <div class="relative min-h-screen flex">
         <!-- Profile -->
         <div class="p-12 bg-blue-400 w-64 ">
-          <img class="rounded-full object-cover w-40" src="/picture/Me.JPG">
+          <img class="rounded-full object-cover w-40" src="picture/Me.JPG">
           <br>
           <div class="text-center">
           <p class="font-semibold text-white text-xl">PEEMTM</p>
@@ -49,7 +49,7 @@
           <div class="my-20">
           <!-- Programming -->
           <div class="flex items-center p-4 shadow-lg">
-            <img class="rounded-l-lg object-cover h-40 w-40 " src="/picture/prog.jpg" alt="Programming">
+            <img class="rounded-l-lg object-cover h-40 w-40 " src="picture/prog.jpg" alt="Programming">
             <div class="p-4 px-8">
               <p class="font-semibold text-xl ">Programming</p>
               <p class="text-sm text-gray-600 py-8 ">
@@ -59,7 +59,7 @@
           </div>
           <!-- UI/UX -->
           <div class="flex p-4 shadow-lg">
-            <img class="rounded-l-lg object-cover h-40 w-40 " src="/picture/Webpage.jpg" alt="Programming">
+            <img class="rounded-l-lg object-cover h-40 w-40 " src="picture/Webpage.jpg" alt="Programming">
             <div class="p-4 px-8">
               <p class="font-semibold text-xl ">Webpage design</p>
               <p class="text-sm text-gray-600 py-8 ">
