--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <br><br>
             <!--navbar-->
             <div class="font-semibold text-x1 text-white">
-              <a href="index.html"><p> Home </p><br></a>
-              <a href="experience.html"><p> Experience </p><br></a>
-              <a href="contact.html"><p> Contact </p></a>
+              <a href="./index.html"><p> Home </p><br></a>
+              <a href="./experience.html"><p> Experience </p><br></a>
+              <a href="./contact.html"><p> Contact </p></a>
             </div>
             <!--navbar icon-->
             <div class="fixed flex bottom-16 inset-x-16 space-x-6">
