--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <div class="relative min-h-screen flex">
         <!-- Profile -->
         <div class="p-12 bg-blue-400 w-64 ">
-          <img class="rounded-full object-cover w-40" src="picture/Me.JPG">
+          <img class="rounded-full object-fill w-40" src="picture/Me.JPG">
           <br>
           <div class="text-center">
           <p class="font-semibold text-white text-xl">PEEMTM</p>
@@ -21,7 +21,7 @@
           <div class="font-semibold text-x1 text-white">
             <a href="./index.html"><p> Home </p><br></a>
             <a href="./experience.html"><p> Experience </p><br></a>
-            <a href="./contact.html"><p> Contact </p></a>
+            <a href="./contact.html"><p class="text-black"> Contact </p></a>
           </div>
           <!--navbar icon-->
           <div class="fixed flex bottom-16 inset-x-16 space-x-6">
@@ -37,37 +37,35 @@
 
         <!-- Contact detail -->
         <div class="flex-1 bg-white ring-gray-300">
-          <div class="py-20 max-w-screen-md mx-auto text-center text-xl">
-            <p class="text-3xl text-black">Contact Me</p>
-            <div class="flex flex-col justify-between">
-                <p class="justify-between">Name
-                    Atthapong
-                </p>
-                <p>Atthapong</p>
+          <div class="py-20 text-xl">
+            <p class="text-center text-3xl text-black">Contact Me</p>
+            <div class="flex-col max-w-screen-md mx-auto py-20">
+              <div class="flex mx-40">
+                <p>Name</p>
+                <p class="fixed mx-60">Atthapong Auewongchai</p>
+              </div>
+              <div class="flex mx-40">
+                <p>Nickname</p>
+                <p class="fixed mx-60">PEEM</p>
+              </div>
+              <div class="flex mx-40">
+                <p>Address</p>
+                <p class="fixed mx-60">321/100 Land & Houses Nong Chom San Sai Chiang Mai 50210</p>
+              </div>
+              <div class="flex mx-40">
+                <p>Facebook</p>
+                <a target="_blank" href="https://www.facebook.com/profile.php?id=100000200849341"><p class="fixed mx-40 text-blue-600">https://www.facebook.com/profile.php?id=100000200849341</p></a>
+              </div>
+              <div class="flex mx-40">
+                <p>Email</p>
+                <a target="_blank" href="mailto:atthapong_a@cmu.ac.th"><p class="px-8 fixed mx-40 text-blue-600">atthapong_a@cmu.ac.th</p></a>
+              </div>
+              <div class="flex mx-40">
+                <p>Phone</p>
+                <p class="fixed mx-60">091-853-4528</p>
+              </div>
             </div>
           </div>
-          <div class="my-20">
-          <!-- Programming -->
-          <div class="flex items-center p-4 shadow-lg">
-            <img class="rounded-l-lg object-cover h-40 w-40 " src="picture/prog.jpg" alt="Programming">
-            <div class="p-4 px-8">
-              <p class="font-semibold text-xl ">Programming</p>
-              <p class="text-sm text-gray-600 py-8 ">
-                I code using C++,java and html using VScode,and also some frontend website.
-              </p>
-            </div>
-          </div>
-          <!-- UI/UX -->
-          <div class="flex p-4 shadow-lg">
-            <img class="rounded-l-lg object-cover h-40 w-40 " src="picture/Webpage.jpg" alt="Programming">
-            <div class="p-4 px-8">
-              <p class="font-semibold text-xl ">Webpage design</p>
-              <p class="text-sm text-gray-600 py-8 ">
-                The front page is the most important for a website to attract people to your website.
-              </p>
-            </div>
-          </div>
-        </div>
         </div>
       </div>
 </body>
