--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <br><br>
             <!--navbar-->
             <div class="font-semibold text-x1 text-white">
-              <a href="./index.html"><p> Home </p><br></a>
+              <a href="./index.html"><p class="text-black"> Home </p><br></a>
               <a href="./experience.html"><p> Experience </p><br></a>
               <a href="./contact.html"><p> Contact </p></a>
             </div>
@@ -42,10 +42,10 @@
               <p class="my-6">Hi, my name is Atthapong.I study in Chiangmai University of computer engineering.I prefer hands-on practice rather than theory.I'm interested in AI and Hardware engineering.</p>
             </div>
             <p class="text-center text-red-600 text-5xl font-semibold">My Skills</p>
-            <div class="my-20">
+            <div class="my-20 max-w-screen-md mx-auto">
             <!-- Programming -->
             <div class="flex items-center p-4 shadow-lg">
-              <img class="rounded-l-lg object-cover h-40 w-40 " src="picture/prog.jpg" alt="Programming">
+              <img class="rounded-l-lg object-fill h-40 w-40 " src="picture/prog.jpg">
               <div class="p-4 px-8">
                 <p class="font-semibold text-xl ">Programming</p>
                 <p class="text-sm text-gray-600 py-8 ">
@@ -55,11 +55,21 @@
             </div>
             <!-- UI/UX -->
             <div class="flex p-4 shadow-lg">
-              <img class="rounded-l-lg object-cover h-40 w-40 " src="picture/Webpage.jpg" alt="Programming">
+              <img class="rounded-l-lg object-fill h-40 w-40 " src="picture/Webpage.jpg">
               <div class="p-4 px-8">
                 <p class="font-semibold text-xl ">Webpage design</p>
                 <p class="text-sm text-gray-600 py-8 ">
                   The front page is the most important for a website to attract people to your website.
+                </p>
+              </div>
+            </div>
+            <!-- Laser cutter -->
+            <div class="flex p-4 shadow-lg">
+              <img class="rounded-l-lg object-fill h-40 w-40 " src="picture/laser.jpg">
+              <div class="p-4 px-8">
+                <p class="font-semibold text-xl ">Laser cutter</p>
+                <p class="text-sm text-gray-600 py-8 ">
+                  Use coreldraw program to draw a workpiece and export to Laser Cutting Machine.
                 </p>
               </div>
             </div>
