--- a/experience.html
+++ b/experience.html
@@ -60,7 +60,7 @@
             </div>
           </div>
           <!-- Game -->
-          <div class="flex p-4 shadow-lg">
+          <div class="flex items-center p-4 shadow-lg">
             <img class="rounded-l-lg object-fill h-40 w-40 " src="picture/c++.jpg" ">
             <div class="p-4 px-8">
               <p class="font-semibold text-xl ">Project game with c++</p>
