--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               </div>
             </div>
             <!-- UI/UX -->
-            <div class="flex p-4 shadow-lg">
+            <div class="flex items-center p-4 shadow-lg">
               <img class="rounded-l-lg object-fill h-40 w-40 " src="picture/Webpage.jpg">
               <div class="p-4 px-8">
                 <p class="font-semibold text-xl ">Webpage design</p>
@@ -64,7 +64,7 @@
               </div>
             </div>
             <!-- Laser cutter -->
-            <div class="flex p-4 shadow-lg">
+            <div class="flex items-center p-4 shadow-lg">
               <img class="rounded-l-lg object-fill h-40 w-40 " src="picture/laser.jpg">
               <div class="p-4 px-8">
                 <p class="font-semibold text-xl ">Laser cutter</p>
